--- a/assets/base.css
+++ b/assets/base.css
@@ -1,5 +1,4 @@
 /* Derived from base colors (theme settings) */
-
 :root,
 .color-background-1 {
   --color-foreground: var(--color-base-text);
@@ -237,8 +236,12 @@ html.no-js .no-js-hidden {
 }
 
 .spaced-section {
-  margin-top: 5rem;
+  margin-top: 0;
 }
+
+/* .spaced-section {
+  margin-top: 5rem;
+} */
 
 .spaced-section:last-child {
   margin-bottom: 5rem;
@@ -2072,3 +2075,20 @@ details-disclosure > details {
     transform: translateY(0);
   }
 }
+
+@font-face {
+  font-family: "NeutraBold";
+  src: url("NeutraTextBold.otf");
+} 
+@font-face {
+  font-family: "ProximaNova";
+  src: url("ProximaNovaReg.otf");
+} 
+@font-face {
+  font-family: "MinionPro";
+  src: url("MinionPro-Regular.otf");
+} 
+@font-face {
+  font-family: "Altissima";
+  src: url("Altissima-Condensed.ttf");
+} 
