--- a/assets/component-card.css
+++ b/assets/component-card.css
@@ -229,16 +229,11 @@
 }
 
 .card__badge {
-  bottom: 1rem;
   display: flex;
   flex-wrap: wrap;
-  left: 1rem;
   position: absolute;
-}
-
-.card__badge > * {
-  margin-right: 1rem;
-  margin-top: 0.5rem;
+  top: 0;
+  width: 100px;
 }
 
 .overlay-card {
