--- a/assets/section-main-product.css
+++ b/assets/section-main-product.css
@@ -59,12 +59,31 @@
   overflow: hidden;
 }
 
-.shopify-payment-button__button--unbranded {
+/* .shopify-payment-button__button--unbranded {
   background-color: var(--color-button-background);
   box-shadow: 0 0 0 0.1rem var(--color-button-border);
   font-size: 1.4rem;
   line-height: 1.2;
   letter-spacing: 0.07rem;
+} */
+
+.shopify-payment-button__button--unbranded {
+  background-color: #f4e7d1;
+  border-radius: 3px;
+  border: 1px solid #d3ab73;
+  height: 62px;
+  width: 194px;
+  color: #000;
+  text-decoration: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 15px;
+  line-height: 18px;
+  font-weight: 600;
+  letter-spacing: .75px;
+  position: relative;
+  text-transform: uppercase;
 }
 
 .shopify-payment-button__button--unbranded:hover,
@@ -137,7 +156,7 @@ fieldset.product-form__input .form__label {
   width: 1px;
 }
 
-.product-form__input input[type='radio'] + label {
+/* .product-form__input input[type='radio'] + label {
   border: 0.1rem solid var(--color-foreground-55);
   border-radius: 4rem;
   background-color: var(--color-background);
@@ -151,15 +170,40 @@ fieldset.product-form__input .form__label {
   text-align: center;
   transition: border var(--duration-short) ease;
   cursor: pointer;
+} */
+
+.product-form__input input[type='radio'] + label {
+  background-color: #f4e7d1;
+  border-radius: 3px;
+  border: 1px solid #d3ab73;
+  height: 48px;
+  width: 85px;
+  color: #000;
+  text-decoration: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 13px;
+  line-height: 32px;
+  font-weight: 600;
+  letter-spacing: .75px;
+  position: relative;
+  display: flex;
+  margin-right: 23px;
 }
 
 .product-form__input input[type='radio'] + label:hover {
   border: 0.1rem solid var(--color-foreground);
 }
 
-.product-form__input input[type='radio']:checked + label {
+/* .product-form__input input[type='radio']:checked + label {
   background-color: var(--color-foreground);
   color: var(--color-background);
+} */
+
+.product-form__input input[type='radio']:checked + label {
+  background-color: white;
+  color: black;
 }
 
 .product-form__input input[type='radio']:disabled + label {
