--- a/sections/great-jones-third-banner.liquid
+++ b/sections/great-jones-third-banner.liquid
@@ -58,21 +58,24 @@
   {%- endif -%}
   
   <div class="banner__content image-banner__content page-width" style="align-items: {{ section.settings.desktop_text_box_position }};">
-    <div class="banner__box image-banner__background color-{{ section.settings.color_scheme }}">
+    <div class="banner__box image-banner__background image-third-banner__alignment color-{{ section.settings.color_scheme }}">
       {%- for block in section.blocks -%}
         {%- case block.type -%}
           {%- when 'heading' -%}
-            <h2 class="banner__heading image-banner__heading h1">
-              <span>{{ block.settings.heading | strip_html }}</span>
+            <h2 class="banner__heading image-banner__heading image-third-banner__heading h1">
+              <span>{{ block.settings.heading }}</span>
+              <!-- <span style="color: #D3AB73 !important;">{{ block.settings.heading | split: " " | last }}</span> -->
             </h2>
           {%- when 'text' -%}
-            <div class="banner__text image-banner__text">
+            <div class="banner__text image-banner__text image-third-banner__text">
               <span>{{ block.settings.text | strip_html }}</span>
             </div>
           {%- when 'buttons' -%}
-            <div class="banner__buttons image-banner__button{% if block.settings.button_label_1 != blank and block.settings.button_link_1 != blank and block.settings.button_label_2 != blank and block.settings.button_link_2 != blank %} banner__buttons--multiple{% endif %}">
+            <div class="banner__buttons image-banner__button image-third-banner__button{% if block.settings.button_label_1 != blank and block.settings.button_link_1 != blank and block.settings.button_label_2 != blank and block.settings.button_link_2 != blank %} banner__buttons--multiple{% endif %}">
               {%- if block.settings.button_label_1 != blank -%}
-                <a href="{{ block.settings.button_link_1 }}" class="button{% if block.settings.button_style_secondary_1 %} button--secondary{% else %} button--primary{% endif %}"{% if block.settings.button_link_1 == blank %} aria-disabled="true"{% endif %}>{{ block.settings.button_label_1 | escape }}</a>
+                <a href="{{ block.settings.button_link_1 }}" class="button{% if block.settings.button_style_secondary_1 %} button--secondary{% else %} button--primary{% endif %}"{% if block.settings.button_link_1 == blank %} aria-disabled="true"{% endif %}>{{ block.settings.button_label_1 | escape }} 
+                    <div class="diamond-third-logo__buttom"><p></p></div>
+                </a>
               {%- endif -%}
               {%- if block.settings.button_label_2 != blank -%}
                 <a href="{{ block.settings.button_link_2 }}" class="button{% if block.settings.button_style_secondary_2 %} button--secondary{% else %} button--primary{% endif %}"{% if block.settings.button_link_2 == blank %} aria-disabled="true"{% endif %}>{{ block.settings.button_label_2 | escape }}</a>
@@ -86,7 +89,7 @@
 
 {% schema %}
 {
-  "name": "t:sections.image-banner.name",
+  "name": "Great Jones Third Banner",
   "tag": "section",
   "class": "spaced-section spaced-section--full-width",
   "settings": [
@@ -210,31 +213,13 @@
           "id": "button_style_secondary_1",
           "default": false,
           "label": "t:sections.image-banner.blocks.buttons.settings.button_style_secondary_1.label"
-        },
-        {
-          "type": "text",
-          "id": "button_label_2",
-          "default": "Button label",
-          "label": "t:sections.image-banner.blocks.buttons.settings.button_label_2.label",
-          "info": "t:sections.image-banner.blocks.buttons.settings.button_label_2.info"
-        },
-        {
-          "type": "url",
-          "id": "button_link_2",
-          "label": "t:sections.image-banner.blocks.buttons.settings.button_link_2.label"
-        },
-        {
-          "type": "checkbox",
-          "id": "button_style_secondary_2",
-          "default": false,
-          "label": "t:sections.image-banner.blocks.buttons.settings.button_style_secondary_2.label"
         }
       ]
     }
   ],
   "presets": [
     {
-      "name": "t:sections.image-banner.presets.name",
+      "name": "Great Jones Third Banner",
       "blocks": [
         {
           "type": "heading"
