--- a/snippets/price.liquid
+++ b/snippets/price.liquid
@@ -27,7 +27,7 @@
   endif
 -%}
 
-<div class="price
+<div class="price price__products
   {%- if price_class %} {{ price_class }}{% endif -%}
   {%- if available == false %} price--sold-out {% endif -%}
   {%- if compare_at_price > price %} price--on-sale {% endif -%}
@@ -44,8 +44,8 @@
         <span class="visually-hidden visually-hidden--inline">{{ 'products.product.price.regular_price' | t }}</span>
       </dt>
       <dd {% if show_badges == false %}class="price__last"{% endif %}>
-        <span class="price-item price-item--regular">
-          {{ money_price }}
+        <span class="price-item price-item--regular price-item__products">
+          {{ money_price | prepend: 'From ' }}
         </span>
       </dd>
     </div>
