--- a/assets/custom2.css
+++ b/assets/custom2.css
@@ -318,9 +318,9 @@
     top: -67px;
     bottom: 0;
     margin: auto;
-    width: 9%;
+    width: 8%;
     height: 0;
-    padding-bottom: 9%;
+    padding-bottom: 8%;
     -ms-transform: rotate(45deg);
     -webkit-transform: rotate(45deg);
     transform: rotate(45deg);
@@ -638,7 +638,8 @@
 /* -------------------------------------------------- GREAT JONES MAIN PRODUCTS -------------------------------------------------- */
 .main-products__background {
     background: #FEF7E7 !important;
-    max-width: none !important;
+    /*max-width: none !important;*/
+    padding: 8% 17%;
 }
 .product__main-content {
     display: flex !important;
@@ -756,4 +757,8 @@
 .background-prueba {
     color: red;
     background-color: royalblue;
+}
+
+.background-example {
+    background-color: lightcoral;
 }
