--- a/sections/great-jones-search.liquid
+++ b/sections/great-jones-search.liquid
@@ -58,7 +58,17 @@
       padding-top: 0.5rem;
     }
   }
+  
 </style>
+
+{% style %}
+  {% if template.name != 'index' %}
+    .search__main-content {
+      background-color: black !important;
+      position: relative !important;
+    }
+  {% endif %}
+{% endstyle %}
 
 <script src="{{ 'details-disclosure.js' | asset_url }}" defer="defer"></script>
 <script src="{{ 'details-modal.js' | asset_url }}" defer="defer"></script>
@@ -458,11 +468,10 @@
                       {% when 'account' %}
                         {% render 'icon-account' %}
                       {% when 'cart' %}
-                        {% render 'icon-share' %}
+                        {% render 'icon-share' %}        
                     {% else %}
                       
                   {% endcase %}
-                  
                   <span {%- if link.current %} class="header__active-menu-item"{% endif %}>{{ link.title | escape }}</span> 
                 </a>
               {%- endif -%}
